# api-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-appimage.sh  docker-compose.yml  example-import.json  pyproject.toml  run.sh  setup.sh
api_base/: __init__.py  __main__.py  desktop.py  exchange.py  providers.py  refresh.py  vault.py  web.py
api_base/static/: app.css  app.js
api_base/templates/: _key_rows.html  index.html
